@@ -234,8 +234,11 @@ With a prefix argument (C-u), files are added read-only (/read-only)."
    (list current-prefix-arg
          (read-directory-name "Module directory: " nil nil t)
          (read-string "File suffixes (comma-separated): "
-                      "py,java,scala,el,sql")
-         (read-string "Content regex (empty for none): " nil)))
+                      (let ((ext (when (buffer-file-name)
+                                   (file-name-extension (buffer-file-name)))))
+                        (if ext ext "py,java,scala,el,sql")))
+         (read-string "Content regex (empty for none): "
+                      (or (thing-at-point 'symbol) ""))))
   (let* ((cmd-prefix   (if read-only "/read-only" "/add"))
          (suffixes     (split-string suffix-input "\\s-*,\\s-*" t))
          (files-by-suffix (aider--get-files-in-directory directory suffixes))
