@@ -64,8 +64,7 @@
 (defcustom aider-popular-models '("sonnet"  ;; really good in practical
                                   "gemini"  ;; SOTA
                                   "o4-mini" ;; good for difficult task
-                                  ;; "gemini-exp"  ;; google stop this free service :(
-                                  "deepseek"  ;; low price, pretty good performance
+                                  "deepseek/deepseek-reasoner" ;; DeepSeek R1 (0528), low price, pretty good performance
                                   )
   "List of available AI models for selection.
 Each model should be in the format expected by the aider command line interface.
@@ -97,7 +96,7 @@ Also based on aider LLM benchmark: https://aider.chat/docs/leaderboards/"
   ("z" "Switch to Aider Buffer"          aider-switch-to-buffer)
   ("p" "Input with Repo Prompt File"     aider-open-prompt-file)
   ("s" "Reset Aider (C-u: clear)"        aider-reset)
-  ("o" "Select Model (C-u: benchmark)" aider-change-model)
+  ("o" "Select Model (C-u: benchmark)"   aider-change-model)
   ("x" "Exit Aider"                      aider-exit))
 
 ;;; Transient menu items for the “File Operation” section.
@@ -106,7 +105,7 @@ Also based on aider LLM benchmark: https://aider.chat/docs/leaderboards/"
   ("w" "Add All Files in Window"                  aider-add-files-in-current-window)
   ("M" "Add Module w/o grep (C-u: readonly)"      aider-add-module)
   ("O" "Drop File in Buffer / under Cursor"       aider-drop-current-file)
-  ("m" "Show Last Commit (C-u: magit-log)"        aider-magit-show-last-commit-or-log)
+  ("m" "Show Last Commit (C-u: All Commits)"      aider-magit-show-last-commit-or-log)
   ("u" "Undo Last Change"                         aider-undo-last-change)
   ("v" "Pull or Review Code Change"               aider-pull-or-review-diff-file)
   ("e" "File Evolution Analysis (C-u: Repo)"      aider-magit-blame-or-log-analyze))
