@@ -14,6 +14,8 @@
   - Follow up change after #178, since same error still happen sometime.
     - Make the function related to advice-add, only take effect in aider-comint-mode and won't pollute markdown-mode.
   - Addressing 1. #159; 2. MatthewZMD/aidermacs#141
+- aider-add-module function have better default value for user input (suffix-input, content-regex)
+- Update popular model: deepseek to DeepSeek R1 (0528)
 
 ** v0.11.1
 
